Email demo button functionality added

--- a/views/iquote.ejs
+++ b/views/iquote.ejs
@@ -43,7 +43,7 @@
                 <div class="row">
 
                     <div class="input-field col s12 center">
-                        <p class="center  login-form-text" style="font-weight: 800;">Enter Email To Receive Your Daily
+                        <p class="center  login-form-text" style="font-weight: 800;">Enter Email To Receive Your 
                             IQuote</p>
                     </div>
 
@@ -67,8 +67,17 @@
                                     id="subscribe">Subscribe</button>
                             </div>
 
+                            
+
                         </div>
 
+                    </form>
+
+                    <form name="subscribeForm" action="/webapp/iquote/demo" method="get">
+                        <div class="input-field col s12">
+                            <button class="btn waves-effect orange waves-light col s12" action="/webapp/iquote/demo" method="get"
+                                        id="sendEmail">Send Email Demo</button>
+                        </div>
                     </form>
 
                 </div>
