--- a/views/weatherblog.ejs
+++ b/views/weatherblog.ejs
@@ -33,7 +33,7 @@
 
 </head>
 
-<body class="yellow">
+<body>
     <div id="login-page" class="row">
 
         <div class="col s12 z-depth-6 card-panel">
