Weather data now updates to the webpage

--- a/views/weatherblog.ejs
+++ b/views/weatherblog.ejs
@@ -14,7 +14,7 @@
         html,
         body {
             height: 100%;
-            width: 100%;
+            width: 75%;
         }
 
         html {
@@ -71,14 +71,14 @@
             <img class="section" src="/weablog/other_icons/sandiego.png" alt="City Name"
                 vertical-align="center">
 
-            <p class="center" vertical-align="center">
+            <p class="center" id="weatherDescription" vertical-align="center">
                 Weather
             </p>
 
             <img class="section" id="weatherIcon" src="/weablog/weather_icons/01d.png" alt="WeatherIcon"
                 vertical-align="center">
                 
-            <p class="center" vertical-align="center">
+            <p class="center" id="temperature" vertical-align="center">
                 Temperature
             </p>
 
