dynamic text is now implemented

--- a/views/weatherblog.ejs
+++ b/views/weatherblog.ejs
@@ -106,7 +106,7 @@
 
         <div class="row s12 z-depth-4 card-panel">
             <button class="btn waves-effect waves-light blue" id="postBlog" action="" method="">
-                Post Blog
+                Undecided
             </button>
             <div id="typed-strings">
                 <p><Strong>Weather Blog</Strong> changes it's <b>color theme</b> according to today's temperature.</p>
